--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,13 @@ include_directories(include ${OpenCV_INCLUDE_DIRS})
 
 add_executable(Projet_OpenCV_CMake
         include/histogram.hpp
-        src/histogram.cpp
-        src/main_test_opencv.cpp
+        src/main.cpp
         include/squares.hpp
         src/squares.cpp
         include/image_treatment.hpp
         src/image_treatment.cpp
-        include/sift_comparator.hpp
-        src/sift_comparator.cpp
+        include/pattern_matcher.hpp
+        src/pattern_matcher.cpp
         )
 
 target_link_libraries(Projet_OpenCV_CMake ${OpenCV_LIBS})
